# llvm-backdoor

llvm/: CMakeLists.txt
llvm/cmake/modules/: AddLLVM.cmake
llvm/docs/: WritingAnLLVMPass.rst
llvm/examples/: CMakeLists.txt  CMakeLists.txt.rej
llvm/examples/Bye/: Bye.cpp
llvm/include/llvm/: InitializePasses.h  LinkAllPasses.h
llvm/include/llvm/Transforms/: Scalar.h
llvm/include/llvm/Transforms/Scalar/: Test.h
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/IPO/: PassManagerBuilder.cpp
llvm/lib/Transforms/MyPass/: CMakeLists.txt  MyPass.cpp
llvm/lib/Transforms/Scalar/: CMakeLists.txt  Scalar.cpp  Test.cpp
llvm/lib/Transforms/Test/: Test.cpp
llvm/test/: lit.cfg.py  lit.site.cfg.py.in
llvm/test/Feature/: load_extension.ll
llvm/test/Other/: new-pm-defaults.ll  new-pm-defaults.ll.rej  new-pm-thinlto-defaults.ll  opt-O0-pipeline.ll  opt-O2-pipeline.ll  opt-O3-pipeline.ll  opt-Os-pipeline.ll
llvm/tools/opt/: opt.cpp
llvm/utils/gn/secondary/llvm/include/llvm/Config/: BUILD.gn
test/: CMakeLists.txt
